# Helicopter_SAS_AP_emb

./: CMakeLists.txt  Converters.cpp  Datatypes.h  FlightModelClient.cpp  FlightModelClient.h  Plotting_Routine.cpp  Plotting_Routine.h  Plotting_Routine.mlx  Plotting_Routine_types.h  README.md  SIM_Main.cpp  Saving_Routine.cpp  Sim_Config.json  Testing_Main.cpp  Testing_Procedures.cpp  Testing_Procedures.h  Testing_Procedures_types.h
Datasets/: Dataset_20250615_1824.h5  Dataset_20250616_1230.h5
Full_Controller/: Auto_Pilot.cpp  Auto_Pilot.h  Auto_Pilot_private.h  Auto_Pilot_types.h  Full_Controller.cpp  Full_Controller.h  Full_Controller_data.cpp  Full_Controller_private.h  Full_Controller_types.h  SAS.cpp  SAS.h  SAS_private.h  SAS_types.h  ert_main.cpp  rtwtypes.h
gRPC/: CMakeLists.txt  flightmodel.proto
